--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,4 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Roboto&family=Poppins&display=swap" rel="stylesheet">
 <div id="sypp"></div>
